--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -15,6 +15,7 @@ h1{
     font-family: 'Katibeh', cursive;
     color: rgb(15, 126, 92);
     font-size: 3rem;
+    padding-top: 20px;
 
     animation-duration: 3s;
     animation-name: titulo;
